Harden ad_sync (circuit breaker + race guard) + review-driven docs
Package (scripts/oracle/ad-sync-install.sql):
- Circuit breaker: ad_sync_breaker state table + breaker_is_open/
  _success/_failure. After 3 consecutive LDAP failures ldap_open()
  fails fast for 300s WITHOUT touching the network, so a DC outage
  cannot add bind latency to every login (AFTER LOGON path). Autonomous-
  tx state survives caller rollback; self-resets on first good bind.
- Duplicate-create race guard: ensure_user swallows ORA-01920/ORA-00955
  from concurrent first-logins of the same new principal, re-raises else.
- Verified on the live lab: compiles VALID; with ad1 down a run logged
  ORA-31203 and the breaker correctly incremented consec_failures.

Docs (addressing external review):
- docs/20 (new): architecture rationale (Kerberos auth + LDAP-driven
  authorization/materialization, NOT native CMU), the fail-OPEN trigger
  decision with reasoning (fail-closed here would be an auth-DoS),
  DNS/reverse-DNS guidance, tested version matrix, wallet auto-login
  risk, external-user naming caveats, Linux-client pointer, and a
  production hardening checklist. Trigger hardening documented as shipped.
- docs/19 A2: -crypto AES256-SHA1 / -ptype KRB5_NT_PRINCIPAL explained;
  AES256 verification (klist -kte etype 18, msDS-SupportedEncryptionTypes
  =16, RC4-fallback caveat); SPN-must-match-exactly (no aliases/shortnames).
- docs/17: breaker mention + rationale cross-link so it can't contradict 20.
- troubleshooting.md: symptom -> layer -> first-command diagnostics matrix.
- README: link chapter 20.
- BUILD-STEPS .md/.txt: step 7 ktpass-flags gloss + AES verify; steps
  8/9 now have the missing command blocks (idempotent guards).

Pushed back on the reviewer's "fail CLOSED" point: for an authorization-
materialization step the user is already Kerberos-authenticated, so
fail-closed would convert an AD/network blip into a full auth outage.
Documented the fail-open rationale; scheduler-only remains 